[package]
name = "usensor_detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.1"
ureq = { version = "2.6.2", features = ["json"] }
chrono = "0.4.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
timer = "0.2.0"

[dependencies.uuid]
version = "1.3.0"
features = ["v4"]
